--- a/template/package.json
+++ b/template/package.json
@@ -11,7 +11,7 @@
     "e2e": "node test/e2e/runner.js"{{/e2e}}{{#if_or unit e2e}},
     "test": "{{#unit}}npm run unit{{/unit}}{{#unit}}{{#e2e}} && {{/e2e}}{{/unit}}{{#e2e}}npm run e2e{{/e2e}}"{{/if_or}}{{#eslint}},
     "eslint": "eslint --ext .js src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"{{/eslint}}{{#tslint}},
-    "tslint": "tslint --ext .ts src{{#unit}} test/unit/specs{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}"{{/tslint}}
+    "tslint": "tslint -s node_modules/custom-tslint-formatters/formatters -t grouped src/**/*.ts{{#unit}} test/unit/**/*.ts{{/unit}}{{#e2e}} test/e2e/*.ts{{/e2e}}"{{/tslint}}
   },
   "dependencies": {
     "vue": "^2.2.2"{{#if_eq compiler "typescript"}},
@@ -99,9 +99,18 @@
     "optimize-css-assets-webpack-plugin": "^1.3.0",
     "ora": "^1.1.0",
     "rimraf": "^2.6.0",
-    {{#if_eq compiler "typescript"}}
+    {{#tslint}}
     "tslint": "^4.5.1",
     "tslint-loader": "^3.4.3",
+    "custom-tslint-formatters": "^2.1.0",
+    {{/tslint}}
+    {{#if_eq tslintConfig "standard"}}
+    "tslint-config-standard": "^4.0.0",
+    {{/if_eq}}
+    {{#if_eq tslintConfig "airbnb"}}
+    "tslint-config-airbnb": "^1.1.1",
+    {{/if_eq}}
+    {{#if_eq compiler "typescript"}}
     "typescript": "^2.2.1",
     {{/if_eq}}
     "url-loader": "^0.5.7",
