--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -12,6 +12,7 @@
     "module": "es2015",
     "moduleResolution": "node",
     "noImplicitThis": true,
+    "lib": ["dom", "es2017"],
     "types": [
       {{#if_eq runner "jest"}}
       "jest",{{/if_eq}}{{#if_eq runner "karma"}}
