Add strict option to TypeScript configuration

--- a/template/tsconfig.json
+++ b/template/tsconfig.json
@@ -11,8 +11,8 @@
     "target": "es6",
     "module": "es2015",
     "moduleResolution": "node",
-    "noImplicitThis": true,
     "lib": ["dom", "es2017"],
+    "strict": true,
     "types": [
       {{#if_eq runner "jest"}}
       "jest",{{/if_eq}}{{#if_eq runner "karma"}}
