Add app build for library project type

--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,6 +1,7 @@
 .DS_Store
 node_modules/
-/dist/
+/dist/{{#if_eq projectType "lib"}}
+/lib/{{/if_eq}}
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
