--- a/template/package.json
+++ b/template/package.json
@@ -111,6 +111,7 @@
     {{#if_eq projectType "lib"}}
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.24.1",
+    "to-pascal-case": "^1.0.0",
     {{/if_eq}}
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
