--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "eventsource-polyfill": "^0.9.6",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
-    "fork-ts-checker-webpack-plugin": "^0.3.0",
+    "fork-ts-checker-webpack-plugin": "Toilal/fork-ts-checker-webpack-plugin",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^21.2.0",
